--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   skeletonizer: ^1.4.2
   url_launcher: ^6.3.1
   wolt_modal_sheet: ^0.9.4
+  dio_cookie_manager: ^3.1.1
+  cookie_jar: ^4.0.8
 
 dev_dependencies:
   build_runner: ^2.4.13
